--- a/styles/electric.css
+++ b/styles/electric.css
@@ -14,15 +14,6 @@ h1 {
     text-align: center;
 }
 
-h2 {
-    font-size: 35px;
-    font-family: 'montserrat';
-    color: mediumseagreen;
-    text-shadow: white;
-    margin-top: 45px;
-    text-align: center;
-}
-
 h3{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
@@ -32,18 +23,11 @@ h3{
 }
 
 p{
-    text-align: center;
-    padding: 20px 0;
+    text-align: justify;
     color: teal;
     font-size: 20px;
     font-family: 'varela round', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    width: 75%;
-    margin: auto;
     line-height: 30px;
-}
-
-.electric_section p{
-    font-family: 'varela round', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 a{
@@ -112,4 +96,22 @@ footer{
 
 .clear{
     clear: both;
+}
+
+#intro_p{
+    width: 70%;
+    margin: auto;
+    margin-bottom: 5%;
+}
+
+img {
+    width: 20%;
+    float: left;
+    padding: 0.5% 1% 0 0;
+}
+
+.electric_section{
+    width: 70%;
+    margin: auto;
+    vertical-align: middle;
 }
